Updated to latest changes